--- a/src/app/vm/vm-actions/vm-reset-password-component/vm-reset-password.component.html
+++ b/src/app/vm/vm-actions/vm-reset-password-component/vm-reset-password.component.html
@@ -1,10 +1,10 @@
-<div>
-  <div [innerHTML]="translatedMessage | async"></div>
+<h2 mat-dialog-title>{{ 'VM_PASSWORD.VM_PASSWORD' | translate }}</h2>
+<mat-dialog-content>
+  <div>{{ translatedMessage | async }}</div>
   <cs-vm-password [vm]="vm"></cs-vm-password>
-
-  <div class="mat-dialog-actions">
-    <button mat-button color="primary" (click)="dialogRef.close()">
-      {{ 'COMMON.OK' | translate }}
-    </button>
-  </div>
-</div>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button color="primary" (click)="dialogRef.close()">
+    {{ 'COMMON.OK' | translate }}
+  </button>
+</mat-dialog-actions>
