fixup! feat: keep sidenav visibility state on the server for every user

--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -1,6 +1,6 @@
 <div class="top-bar">
   <div
-    *ngIf="!(isShowSidenav$ | async)"
+    *ngIf="!(isSidenavVisible$ | async)"
     class="drawer-button"
     (click)="openSidenav()"
   >
