--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container fullscreen>
-  <mat-sidenav [opened]="showSidenav$ | async" mode="side">
+  <mat-sidenav [opened]="isSidenavVisible$ | async" mode="side">
     <cs-sidenav [title]="title"></cs-sidenav>
   </mat-sidenav>
 
