--- a/src/app/shared/components/parameters-pair/parameters-pair.component.scss
+++ b/src/app/shared/components/parameters-pair/parameters-pair.component.scss
@@ -22,7 +22,7 @@
   cs-input-group {
     mat-form-field {
       padding-top: 0.2em;
-      max-width: 100px;
+      max-width: 80%;
 
       /deep/ div.mat-input-infix {
         width: auto !important;
