fix: update behavior of select buttons in the VM creation dialogs

--- a/src/app/vm/vm-creation/template/vm-template-dialog.component.html
+++ b/src/app/vm/vm-creation/template/vm-template-dialog.component.html
@@ -33,7 +33,7 @@
     mat-button
     [disabled]="isSubmitButtonDisabled()"
     color="primary"
-    (click)="select.emit(selectedTemplate)"
+    (click)="selectionChange.emit(selectedTemplate)"
   >
     {{ 'COMMON.SELECT' | translate }}
   </button>
