refactor(vm): lint fixes

--- a/src/app/vm/vm-list-item/row-item/vm-list-row-item.component.html
+++ b/src/app/vm/vm-list-item/row-item/vm-list-row-item.component.html
@@ -21,7 +21,7 @@
 
   <div class="entity-list-item-data">
     <span>{{ 'VM_PAGE.CARD.CPU' | translate }}: </span>
-    <span>{{ 'SERVICE_OFFERING.CPU_MHZ' | translate:({ count: item.cpuNumber, speed: item.cpuSpeed }) }}</span>
+    <span>{{ 'SERVICE_OFFERING.CPU_MHZ' | translate:({ count: item.cpunumber, speed: item.cpuspeed }) }}</span>
   </div>
 
   <div class="entity-list-item-data">
