--- a/src/app/tags/tag-edit/tag-edit.component.html
+++ b/src/app/tags/tag-edit/tag-edit.component.html
@@ -12,6 +12,7 @@
         [forbiddenValues]="forbiddenKeys || []"
         [placeholder]="'TAGS.TAG_KEY' | translate"
         [maxlength]="maxKeyLength"
+        pattern="^[a-zA-ZА-яЁё]{1}[^,]*$"
         autofocus
         required
         #keyField="ngModel"
@@ -31,6 +32,7 @@
         [(ngModel)]="value"
         [placeholder]="'TAGS.TAG_VALUE' | translate"
         [maxlength]="maxValueLength"
+        pattern="^[a-zA-ZА-яЁё]{1}[^,]*$"
         required
       >
       <mat-hint align="end">
