--- a/src/app/shared/components/parameters-pair/parameters-pair.component.scss
+++ b/src/app/shared/components/parameters-pair/parameters-pair.component.scss
@@ -1,10 +1,11 @@
 .key {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   cursor: default;
   max-width: 50%;
   margin-right: 5px;
+  /* For Firefox */
+  word-wrap: break-word;
+  /* For Chrome and IE */
+  word-break: break-word;
 }
 
 .value {
