feat(shared-groups): fix converting method, expand action interface

--- a/src/app/security-group/sg-actions/sg-actions-component/sg-actions.component.html
+++ b/src/app/security-group/sg-actions/sg-actions-component/sg-actions.component.html
@@ -1,5 +1,6 @@
 <ng-container *ngFor="let action of actions">
   <button
+    *ngIf="action.canShow(securityGroup)"
     mat-menu-item
     [disabled]="!action.canActivate(securityGroup)"
     (click)="onAction(action)"
