--- a/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.html
+++ b/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.html
@@ -63,7 +63,7 @@
     mat-button
     color="primary"
     type="submit"
-    [disabled]="preselectedDiskOffering === selectedDiskOffering"
+    [disabled]="isSubmitButtonDisabled()"
     (click)="onSubmit()"
   >
     {{ 'COMMON.SELECT' | translate }}
