--- a/src/app/tags/tag-edit/tag-edit.component.html
+++ b/src/app/tags/tag-edit/tag-edit.component.html
@@ -12,7 +12,7 @@
         [forbiddenValues]="forbiddenKeys || []"
         [placeholder]="'TAGS.TAG_KEY' | translate"
         [maxlength]="maxKeyLength"
-        pattern="[\S]{1}[^,]*$"
+        pattern="^\S.*$"
         autofocus
         required
         #keyField="ngModel"
@@ -32,7 +32,7 @@
         [(ngModel)]="value"
         [placeholder]="'TAGS.TAG_VALUE' | translate"
         [maxlength]="maxValueLength"
-        pattern="[\S]{1}[^,]*$"
+        pattern="^\S.*$"
         required
         #valueField="ngModel"
       >
