--- a/src/app/settings/components/password-update-form/password-update-form.component.html
+++ b/src/app/settings/components/password-update-form/password-update-form.component.html
@@ -1,5 +1,5 @@
 <h3 class="no-margin">{{ 'SETTINGS.SECURITY.CHANGE_PASSWORD' | translate }}</h3>
-<form [formGroup]="passwordForm" (ngSubmit)="onPasswordUpdate()">
+<form [formGroup]="passwordForm" (ngSubmit)="onPasswordChange()">
 
   <mat-form-field>
     <input
