fix bugs after testing

--- a/src/app/template/template-sidebar/details/details.component.html
+++ b/src/app/template/template-sidebar/details/details.component.html
@@ -47,7 +47,7 @@
           <div>{{ 'TEMPLATE_PAGE.TEMPLATE_DETAILS.CREATED' | translate }}</div>
           <div>{{ templateCreated | stringifyDate }}</div>
         </div>
-        <div *ngIf="entity.type" class="row">
+        <div *ngIf="entity.templatetype" class="row">
           <div>{{ 'TEMPLATE_PAGE.TEMPLATE_DETAILS.TYPE' | translate }}</div>
           <div>{{ templateTypeTranslationToken | translate }}</div>
         </div>
