--- a/src/app/template/template-sidebar/zones/zones.component.html
+++ b/src/app/template/template-sidebar/zones/zones.component.html
@@ -13,7 +13,7 @@
         <div>{{ 'TEMPLATE_PAGE.ZONE_DETAILS.READY' | translate }}</div>
         <div>{{ zone.isready | viewValue | async }}</div>
       </div>
-      <div *ngIf="!zone.isReady && zone.status" class="row">
+      <div *ngIf="!zone.isready && zone.status" class="row">
         <div>{{ 'COMMON.STATUS' | translate }}</div>
         <div>{{ zone.status }}</div>
       </div>
