--- a/src/app/template/template-sidebar/template-description/template-description.component.html
+++ b/src/app/template/template-sidebar/template-description/template-description.component.html
@@ -5,6 +5,6 @@
     </mat-card-title>
   </mat-card-header>
   <mat-card-content class="content-wrap">
-    {{ template.displayText }}
+    {{ template.displaytext }}
   </mat-card-content>
 </mat-card>
