fixup! fix: improve configureSidenav configuration

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -52,7 +52,7 @@
             [@handleSlide]="'in'"
           ></span>
           <mat-checkbox
-            *ngIf="route.id !== alwaysVisibleRouteId"
+            *ngIf="!isAlwaysVisible(route)"
             [(ngModel)]="route.visible"
             (change)="handleRouteChecked($event)"
             [@handleSlide]="!editing ? 'in' : ''"
@@ -63,7 +63,7 @@
 
       <ng-template #normalMode>
         <a
-          *ngIf="route.visible || route.id === alwaysVisibleRouteId"
+          *ngIf="route.visible || isAlwaysVisible(route)"
           class="navigation-link link-container"
           [routerLink]="route.path"
           routerLinkActive="link-active"
