--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -43,36 +43,43 @@
     [dragulaModel]="routes"
   >
     <ng-container *ngFor="let route of routes">
-      <a
-        *ngIf="!editing && route.enabled"
-        class="navigation-link link-container"
-        [routerLink]="route.path"
-        routerLinkActive="link-active"
-        (click)="linkClick(route.path)"
-      >
-        <mat-icon [@linkSlide]="'in'" class="link-element" [ngClass]="route.icon"></mat-icon>
-        <div [@linkSlide]="'in'" class="link-element" [innerHTML]="route.text | translate"></div>
-      </a>
-      <div
-        *ngIf="editing"
-        class="drag navigation-link link-container"
-      >
-        <span
-          class="handle"
-          [@handleSlide]="'in'"
-        ></span>
-        <mat-checkbox
-          [(ngModel)]="route.enabled"
-          (change)="handleRouteChecked($event)"
-          [@handleSlide]="!editing ? 'in' : ''"
-        ></mat-checkbox>
-        <div class="link-element-edit" [innerHTML]="route.text | translate"></div>
-      </div>
+      <ng-container *ngIf="editing; then editMode else normalMode"></ng-container>
+
+      <ng-template #editMode>
+        <div class="drag navigation-link link-container">
+          <span
+            class="handle"
+            [@handleSlide]="'in'"
+          ></span>
+          <mat-checkbox
+            *ngIf="!isAlwaysVisible(route)"
+            [(ngModel)]="route.visible"
+            (change)="handleRouteChecked($event)"
+            [@handleSlide]="!editing ? 'in' : ''"
+          ></mat-checkbox>
+          <div class="link-element-edit" [innerHTML]="route.text | translate"></div>
+        </div>
+      </ng-template>
+
+      <ng-template #normalMode>
+        <a
+          *ngIf="route.visible || isAlwaysVisible(route)"
+          class="navigation-link link-container"
+          [routerLink]="route.path"
+          routerLinkActive="link-active"
+          (click)="linkClick(route.path)"
+        >
+          <mat-icon [@linkSlide]="'in'" class="link-element" [ngClass]="route.icon"></mat-icon>
+          <div [@linkSlide]="'in'" class="link-element" [innerHTML]="route.text | translate"></div>
+        </a>
+      </ng-template>
+
     </ng-container>
   </div>
+
   <ng-container *ngFor="let route of nonDraggableRoutes">
     <a
-      *ngIf="!editing && route.enabled"
+      *ngIf="!editing && route.visible"
       class="navigation-link link-container"
       [routerLink]="route.path"
       routerLinkActive="link-active"
