fix: add ability to highlight a text which has a tooltip

--- a/src/app/shared/components/parameters-pair/parameters-pair.component.scss
+++ b/src/app/shared/components/parameters-pair/parameters-pair.component.scss
@@ -15,6 +15,7 @@
   text-align: right;
   white-space: nowrap;
   max-width: 50%;
+  user-select: all !important;
 
   input {
     text-align: end;
