fix: add styles which supports in IE, add the same to the key

--- a/src/app/shared/components/parameters-pair/parameters-pair.component.html
+++ b/src/app/shared/components/parameters-pair/parameters-pair.component.html
@@ -1,11 +1,10 @@
 <div class="height-container">
   <div class="flex-container container">
-    <div class="key">
-      <div
-        [innerHTML]="name | translate"
-        [matTooltip]="name | translate"
-      ></div>
-    </div>
+    <div
+      class="key"
+      [innerHTML]="name | translate"
+      [matTooltip]="name | translate"
+    ></div>
     <div *ngIf="canBeEdit" class="buttons">
       <button
         class="button-18px"
