fix: change behaviour of customComputeOfferingRestrictions feature

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -7,7 +7,7 @@
     <mat-icon class="mdi-chevron-left"></mat-icon>
   </button>
   <button
-    *ngIf="canEdit"
+    *ngIf="allowConfiguring"
     class="lock-button"
     mat-icon-button
     [disabled]="updatingOrder"
