--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav [opened]="isSidenavVisible$ | async" mode="side">
-    <cs-sidenav [title]="title"></cs-sidenav>
+    <cs-sidenav [title]="title" [allowConfiguring]="allowReorderingSidebar$ | async"></cs-sidenav>
   </mat-sidenav>
 
   <router-outlet></router-outlet>
