--- a/src/app/service-offering/custom-service-offering/custom-service-offering.component.html
+++ b/src/app/service-offering/custom-service-offering/custom-service-offering.component.html
@@ -1,63 +1,52 @@
 <h3 class="mat-dialog-title">{{ 'SERVICE_OFFERING.CUSTOM_SERVICE_OFFERING.TITLE' | translate }}</h3>
-<form (ngSubmit)="onSubmit()" #customOfferingForm="ngForm" novalidate>
+<form [formGroup]="hardwareForm" (ngSubmit)="onSubmit()">
   <div class="mat-dialog-content">
     <h5>{{ 'SERVICE_OFFERING.CUSTOM_SERVICE_OFFERING.CPU_NUMBER' | translate }}</h5>
-    <mat-form-field *ngIf="offering && restrictions" class="full-width-input">
+    <mat-form-field *ngIf="offering" class="full-width-input">
       <input
         matInput
-        name="cpuNumber"
         type="number"
-        [(ngModel)]="offering.cpunumber"
-        [min]="restrictions.cpunumber.min"
-        [max]="restrictions.cpunumber.max"
-        [csMinValue]="restrictions.cpunumber.min"
-        [csMaxValue]="restrictions.cpunumber.max"
+        name="cpuNumber"
+        [min]="offering.restrictions.cpunumber.min"
+        [max]="offering.restrictions.cpunumber.max"
+        [csMinValue]="offering.restrictions.cpunumber.min"
+        [csMaxValue]="offering.restrictions.cpunumber.max"
+        formControlName="cpuNumber"
         required
-        #cpuNumberControl="ngModel"
       >
-      <mat-error>
-        {{ errorMessage(restrictions.cpunumber.min, restrictions.cpunumber.max) | async }}
-      </mat-error>
     </mat-form-field>
 
     <h5>{{ 'SERVICE_OFFERING.CUSTOM_SERVICE_OFFERING.CPU_SPEED' | translate }}</h5>
-    <mat-form-field *ngIf="offering && restrictions" class="full-width-input">
+    <mat-form-field *ngIf="offering" class="full-width-input">
       <input
         matInput
-        name="cpuSpeed"
         type="number"
-        [(ngModel)]="offering.cpuspeed"
-        [min]="restrictions.cpuspeed.min"
-        [max]="restrictions.cpuspeed.max"
-        [csMinValue]="restrictions.cpuspeed.min"
-        [csMaxValue]="restrictions.cpuspeed.max"
+        name="cpuSpeed"
+        [min]="offering.restrictions.cpuspeed.min"
+        [max]="offering.restrictions.cpuspeed.max"
+        [csMinValue]="offering.restrictions.cpuspeed.min"
+        [csMaxValue]="offering.restrictions.cpuspeed.max"
+        formControlName="cpuSpeed"
         required
-        #cpuSpeedControl="ngModel"
       >
-      <mat-error>
-        {{ errorMessage(restrictions.cpuspeed.min, restrictions.cpuspeed.max) | async }}
-      </mat-error>
     </mat-form-field>
 
     <h5>{{ 'SERVICE_OFFERING.CUSTOM_SERVICE_OFFERING.MEMORY' | translate }}</h5>
-    <mat-form-field *ngIf="offering && restrictions" class="full-width-input">
+    <mat-form-field *ngIf="offering" class="full-width-input">
       <input
         matInput
-        name="memory"
         type="number"
-        [(ngModel)]="offering.memory"
-        [min]="restrictions.memory.min"
-        [max]="restrictions.memory.max"
-        [csMinValue]="restrictions.memory.min"
-        [csMaxValue]="restrictions.memory.max"
+        name="memory"
+        [min]="offering.restrictions.memory.min"
+        [max]="offering.restrictions.memory.max"
+        [csMinValue]="offering.restrictions.memory.min"
+        [csMaxValue]="offering.restrictions.memory.max"
+        formControlName="memory"
         required
-        #memoryControl="ngModel"
       >
-      <mat-error>
-        {{ errorMessage(restrictions.memory.min, restrictions.memory.max) | async }}
-      </mat-error>
     </mat-form-field>
   </div>
+
   <div class="mat-dialog-actions">
     <button
       mat-button
@@ -71,7 +60,7 @@
       mat-button
       color="primary"
       type="submit"
-      [disabled]="!customOfferingForm.valid"
+      [disabled]="!hardwareForm.valid"
     >
       {{ 'COMMON.CONFIRM' | translate }}
     </button>
