--- a/src/app/vm/vm-actions/vm-actions-component/vm-actions.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-actions.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!vmIsDestroyed">
-  <ng-container *ngFor="let action of vmActions">
+  <ng-container *ngFor="let action of vmActions$ | async">
     <ng-container *ngIf="!action.hidden || !action.hidden(vm)">
       <button
         mat-menu-item
