--- a/src/app/service-offering/service-offering-list/service-offering-list.component.html
+++ b/src/app/service-offering/service-offering-list/service-offering-list.component.html
@@ -1,11 +1,12 @@
 <div *ngFor="let group of list">
   <ng-container *ngIf="group.items.data.length">
-    <h4>{{ getName(group.soClass) | translate }}</h4>
+    <h4 [style.visibility]="getName(group.soClass) === 'empty' ? 'hidden' : 'visible'">
+      {{ getName(group.soClass) | translate }}
+    </h4>
     <h5>{{ getDescription(group.soClass) | translate }}</h5>
 
     <div class="table-wrapper">
       <mat-table [dataSource]="group.items">
-
         <ng-container matColumnDef="name">
           <mat-header-cell *matHeaderCellDef> {{ 'SERVICE_OFFERING.COLUMN.NAME' | translate }} </mat-header-cell>
           <mat-cell *matCellDef="let element">
@@ -60,10 +61,14 @@
         <ng-container matColumnDef="radioButton">
           <mat-header-cell *matHeaderCellDef></mat-header-cell>
           <mat-cell *matCellDef="let element">
-            <mat-radio-button
-              name="service-offering"
-              [checked]="selectedOffering && element.id === selectedOffering.id"
-            ></mat-radio-button>
+            <mat-radio-group
+            >
+              <mat-radio-button
+                name="service-offering"
+                [value]="element"
+                [checked]="selectedOffering && element.id === selectedOffering.id"
+              ></mat-radio-button>
+            </mat-radio-group>
           </mat-cell>
         </ng-container>
 
