fix: add ability to highlight a text which has a tooltip (#1249)
PR close #1223

--- a/src/app/shared/components/parameters-pair/parameters-pair.component.scss
+++ b/src/app/shared/components/parameters-pair/parameters-pair.component.scss
@@ -6,6 +6,7 @@
   word-wrap: break-word;
   /* For Chrome and IE */
   word-break: break-word;
+  user-select: text !important;
 }
 
 .value {
@@ -15,6 +16,7 @@
   text-align: right;
   white-space: nowrap;
   max-width: 50%;
+  user-select: text !important;
 
   input {
     text-align: end;
