fixup! fix: check equivalence of params for custom compute offering during a change

--- a/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.html
+++ b/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.html
@@ -25,7 +25,7 @@
     <div
       class="message warning"
       *ngIf="showRebootMessage"
-    >{{ "SERVICE_OFFERING.VM_WILL_BE_REBOOTED" | translate }}
+    >{{ "SERVICE_OFFERING.VM_WILL_BE_RESTARTED" | translate }}
     </div>
   </div>
   <div class="mat-dialog-actions">
