refactor(config): update customComputeOfferingRestrictions to customComputeOfferingParameters

--- a/src/app/service-offering/custom-service-offering/custom-service-offering.component.html
+++ b/src/app/service-offering/custom-service-offering/custom-service-offering.component.html
@@ -7,10 +7,10 @@
         matInput
         type="number"
         name="cpuNumber"
-        [min]="offering.restrictions.cpunumber.min"
-        [max]="offering.restrictions.cpunumber.max"
-        [csMinValue]="offering.restrictions.cpunumber.min"
-        [csMaxValue]="offering.restrictions.cpunumber.max"
+        [min]="offering.customOfferingRestrictions.cpunumber.min"
+        [max]="offering.customOfferingRestrictions.cpunumber.max"
+        [csMinValue]="offering.customOfferingRestrictions.cpunumber.min"
+        [csMaxValue]="offering.customOfferingRestrictions.cpunumber.max"
         formControlName="cpuNumber"
         required
       >
@@ -22,10 +22,10 @@
         matInput
         type="number"
         name="cpuSpeed"
-        [min]="offering.restrictions.cpuspeed.min"
-        [max]="offering.restrictions.cpuspeed.max"
-        [csMinValue]="offering.restrictions.cpuspeed.min"
-        [csMaxValue]="offering.restrictions.cpuspeed.max"
+        [min]="offering.customOfferingRestrictions.cpuspeed.min"
+        [max]="offering.customOfferingRestrictions.cpuspeed.max"
+        [csMinValue]="offering.customOfferingRestrictions.cpuspeed.min"
+        [csMaxValue]="offering.customOfferingRestrictions.cpuspeed.max"
         formControlName="cpuSpeed"
         required
       >
@@ -37,10 +37,10 @@
         matInput
         type="number"
         name="memory"
-        [min]="offering.restrictions.memory.min"
-        [max]="offering.restrictions.memory.max"
-        [csMinValue]="offering.restrictions.memory.min"
-        [csMaxValue]="offering.restrictions.memory.max"
+        [min]="offering.customOfferingRestrictions.memory.min"
+        [max]="offering.customOfferingRestrictions.memory.max"
+        [csMinValue]="offering.customOfferingRestrictions.memory.min"
+        [csMaxValue]="offering.customOfferingRestrictions.memory.max"
         formControlName="memory"
         required
       >
