Update Angular and main packages

--- a/src/app/shared/components/disk-offering/disk-offering-selector/disk-offering-selector.component.html
+++ b/src/app/shared/components/disk-offering/disk-offering-selector/disk-offering-selector.component.html
@@ -6,7 +6,7 @@
   </button>
 </div>
 
-<div class="mat-input-wrapper">
+<div class="mat-form-field-wrapper">
   <span class="disk-offering-info truncate">
     <ng-container *ngIf="diskOffering; then offeringName else nameStub"></ng-container>
     <ng-template #offeringName>{{ diskOffering.name }}</ng-template>
