--- a/src/app/shared/components/parameters-pair/parameters-pair.component.scss
+++ b/src/app/shared/components/parameters-pair/parameters-pair.component.scss
@@ -27,7 +27,7 @@
       padding-top: 0.2em;
       max-width: 80%;
 
-      /deep/ div.mat-input-infix {
+      /deep/ div.mat-form-field-infix {
         width: auto !important;
       }
     }
