--- a/src/app/shared/components/slider/slider.component.html
+++ b/src/app/shared/components/slider/slider.component.html
@@ -21,7 +21,7 @@
 <mat-slider
   [min]="min"
   [max]="max"
-  [thumb-label]="true"
+  [thumbLabel]="true"
   [ngModel]="sliderValue"
   (ngModelChange)="handleSliderChange($event)"
 ></mat-slider>
