--- a/src/app/volume/volume-creation/volume-creation-dialog.component.html
+++ b/src/app/volume/volume-creation/volume-creation-dialog.component.html
@@ -26,7 +26,7 @@
             id="zone"
             name="zone"
             required
-            (change)="updateZone($event.value)"
+            (selectionChange)="updateZone($event.value)"
           >
             <mat-option
               *ngFor="let z of zones"
