--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -26,7 +26,7 @@ $theme: mat-light-theme($primary, $accent);
 }
 
 body {
-  font-family: $mat-font-family;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   margin: 0;
 }
 
