--- a/src/app/vm/vm-creation/components/service-offering-selector/service-offering-selector.component.html
+++ b/src/app/vm/vm-creation/components/service-offering-selector/service-offering-selector.component.html
@@ -8,7 +8,7 @@
   </button>
 </div>
 
-<div class="mat-input-wrapper">
+<div class="mat-form-field-wrapper">
   <ng-container *ngIf="serviceOffering; then offeringNameBlock else nameStub"></ng-container>
   <ng-template #offeringNameBlock>
     <span class="service-offering-info truncate" [matTooltip]="offeringName | async">
