--- a/src/app/vm/vm-creation/template/vm-creation-template.component.html
+++ b/src/app/vm/vm-creation/template/vm-creation-template.component.html
@@ -8,7 +8,7 @@
   </button>
 </div>
 
-<div class="mat-input-wrapper template-list">
+<div class="mat-form-field-wrapper template-list">
   <ng-container *ngIf="template">
     <span class="template-info truncate" [matTooltip]="templateName | async">
       {{ templateName | async }}
