--- a/src/app/vm/vm-sidebar/network-detail/firewall-rules/firewall-rules-detail.component.html
+++ b/src/app/vm/vm-sidebar/network-detail/firewall-rules/firewall-rules-detail.component.html
@@ -11,7 +11,14 @@
         class="row"
         *ngFor="let group of vm.securityGroup"
       >
-        <span class="sg-name">{{ group.name }}</span>
+        <span class="sg-name">
+          <ng-container *ngIf="isDefault(group) && defaultGroupName">
+          {{ defaultGroupName }}
+          </ng-container>
+          <ng-container *ngIf="!isDefault(group) || !defaultGroupName">
+          {{ group.name }}
+          </ng-container>
+        </span>
         <button
           mat-icon-button
           class="mat-icon-button mat-icon-button--small"
