--- a/src/app/security-group/sg-page/security-group-page.component.html
+++ b/src/app/security-group/sg-page/security-group-page.component.html
@@ -23,6 +23,7 @@
       [viewMode]="viewMode"
       [mode]="mode"
       [vmList]="vmList"
+      [defaultGroupName]="defaultGroupName"
       cs-list
     ></cs-security-group-list>
   </ng-container>
