--- a/src/app/vm/vm-creation/components/security-group/vm-creation-security-group.component.html
+++ b/src/app/vm/vm-creation/components/security-group/vm-creation-security-group.component.html
@@ -23,6 +23,7 @@
   <cs-security-group-selector
     *ngIf="isModeSelector && sharedGroups"
     [securityGroups]="sharedGroups"
+    [defaultGroupName]="defaultGroupName"
     [(ngModel)]="savedData.securityGroups"
   ></cs-security-group-selector>
 </div>
