--- a/src/app/vm/vm-creation/vm-creation.component.scss
+++ b/src/app/vm/vm-creation/vm-creation.component.scss
@@ -1,5 +1,13 @@
 :host {
   display: block;
+
+  /deep/ .mat-tab-body-content {
+    overflow: hidden !important;
+  }
+
+  /deep/ .mat-tab-label {
+    width: 50% !important;
+  }
 }
 
 .overlay {
@@ -59,13 +67,10 @@ h4 {
   margin-top: 20px;
 }
 
-.left-column {
-  width: 270px;
-  margin-right: 10px;
-}
-.right-column {
-  width: 270px;
+.settings-column {
+  width: 95%;
   margin-left: 10px;
+  padding-top: 10px;
 }
 
 .root-disk-size {
@@ -123,4 +128,12 @@ mat-progress-bar {
 
 .disk-offerings {
   padding-bottom: 13px;
+}
+
+.mat-tab-label {
+  width: 50% !important;
+}
+
+mat-tab-group {
+  width: 100% !important;
 }
