--- a/src/app/template/template-sidebar/base-template-sidebar.component.html
+++ b/src/app/template/template-sidebar/base-template-sidebar.component.html
@@ -21,7 +21,7 @@
         [matTooltip]="'TEMPLATE_PAGE.SIDEBAR.TEMPLATE' | translate"
         class="mat-tab-tooltip"
       >
-        <mat-icon class="mdi-disk"></mat-icon>
+        <mat-icon class="mdi-disc"></mat-icon>
       </div>
     </a>
     <a
