--- a/src/app/volume/volume-sidebar/details/volume/volume-sidebar-volume.component.html
+++ b/src/app/volume/volume-sidebar/details/volume/volume-sidebar-volume.component.html
@@ -7,18 +7,26 @@
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <div class="grid grid-right">
-      <div class="row" *ngIf="volume">
+    <div class="grid grid-right" *ngIf="volume">
+      <div class="row">
         <div>{{ 'VOLUME_PAGE.DETAILS.SIZE' | translate }}</div>
         <div>{{ (volume.size | division:2:30:2) }} {{ ('UNITS.GB' | translate) }}</div>
       </div>
-      <div class="row" *ngIf="volume">
+      <div class="row">
         <div>{{ 'VOLUME_PAGE.DETAILS.CREATED' | translate }}</div>
         <div>{{ volumeCreated | stringifyDate }}</div>
       </div>
-      <div class="row" *ngIf="volume">
+      <div class="row">
         <div>{{ 'VOLUME_PAGE.DETAILS.STORAGE_TYPE' | translate }}</div>
         <div>{{ diskOfferingStorageType | translate }}</div>
+      </div>
+      <div class="row">
+        <div>{{ 'VOLUME_PAGE.DETAILS.STATE' | translate }}</div>
+        <div>{{ stateTranslationToken | translate }}</div>
+      </div>
+      <div class="row" *ngIf="volume.vmdisplayname">
+        <div>{{ 'VOLUME_PAGE.DETAILS.VM' | translate }}</div>
+        <div>{{ volume.vmdisplayname }}</div>
       </div>
     </div>
   </mat-card-content>
