--- a/src/app/snapshot/recurring-snapshots/recurring-snapshots.component.html
+++ b/src/app/snapshot/recurring-snapshots/recurring-snapshots.component.html
@@ -16,19 +16,43 @@
     [selectedIndex]="policyMode"
     (selectedTabChange)="tabChanged($event)"
   >
-    <mat-tab label="{{ 'SNAPSHOT_POLICIES.HOURLY' | translate }}"></mat-tab>
-    <mat-tab label="{{ 'SNAPSHOT_POLICIES.DAILY' | translate }}"></mat-tab>
-    <mat-tab label="{{ 'SNAPSHOT_POLICIES.WEEKLY' | translate }}"></mat-tab>
-    <mat-tab label="{{ 'SNAPSHOT_POLICIES.MONTHLY' | translate }}"></mat-tab>
+    <mat-tab label="{{ 'SNAPSHOT_POLICIES.HOURLY' | translate }}">
+      <div class="editor">
+        <cs-policy-editor
+          [timeFormat]="timeFormat$ | async"
+          [policyMode]="policyMode"
+          (onPolicySave)="addPolicy($event)"
+        ></cs-policy-editor>
+      </div>
+    </mat-tab>
+    <mat-tab label="{{ 'SNAPSHOT_POLICIES.DAILY' | translate }}">
+      <div class="editor">
+        <cs-policy-editor
+          [timeFormat]="timeFormat$ | async"
+          [policyMode]="policyMode"
+          (onPolicySave)="addPolicy($event)"
+        ></cs-policy-editor>
+      </div>
+    </mat-tab>
+    <mat-tab label="{{ 'SNAPSHOT_POLICIES.WEEKLY' | translate }}">
+      <div class="editor">
+        <cs-policy-editor
+          [timeFormat]="timeFormat$ | async"
+          [policyMode]="policyMode"
+          (onPolicySave)="addPolicy($event)"
+        ></cs-policy-editor>
+      </div>
+    </mat-tab>
+    <mat-tab label="{{ 'SNAPSHOT_POLICIES.MONTHLY' | translate }}">
+      <div class="editor">
+        <cs-policy-editor
+          [timeFormat]="timeFormat$ | async"
+          [policyMode]="policyMode"
+          (onPolicySave)="addPolicy($event)"
+        ></cs-policy-editor>
+      </div>
+    </mat-tab>
   </mat-tab-group>
-
-  <div class="editor">
-    <cs-policy-editor
-      [timeFormat]="timeFormat$ | async"
-      [policyMode]="policyMode"
-      (onPolicySave)="addPolicy($event)"
-    ></cs-policy-editor>
-  </div>
 
   <div class="mat-dialog-actions">
     <button
