--- a/src/app/vm/vm-sidebar/storage-detail/volumes/snapshot/snapshot-modal.component.scss
+++ b/src/app/vm/vm-sidebar/storage-detail/volumes/snapshot/snapshot-modal.component.scss
@@ -35,8 +35,12 @@ tbody:hover {
   }
 }
 
-mat-cell {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+table {
+  width: 100%;
+
+  td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
