--- a/src/app/events/components/event-list.component.html
+++ b/src/app/events/components/event-list.component.html
@@ -66,38 +66,38 @@
     <ng-container *ngIf="events?.length; then eventsTable else noEvents"></ng-container>
 
     <ng-template #eventsTable>
-      <mat-table [dataSource]="dataSource">
+      <table mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="description">
-          <mat-header-cell *matHeaderCellDef> {{ 'EVENT_PAGE.DESCRIPTION' | translate}} </mat-header-cell>
-          <mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef> {{ 'EVENT_PAGE.DESCRIPTION' | translate}} </th>
+          <td mat-cell *matCellDef="let element">
             <span [innerHTML]="element.description | highlight:query"></span>
-          </mat-cell>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="level">
-          <mat-header-cell *matHeaderCellDef> {{ 'EVENT_PAGE.LEVEL' | translate }} </mat-header-cell>
-          <mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef> {{ 'EVENT_PAGE.LEVEL' | translate }} </th>
+          <td mat-cell *matCellDef="let element">
             <span [innerHTML]="element.level | highlight:query"></span>
-          </mat-cell>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="type">
-          <mat-header-cell *matHeaderCellDef> {{ 'EVENT_PAGE.TYPE' | translate }} </mat-header-cell>
-          <mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef> {{ 'EVENT_PAGE.TYPE' | translate }} </th>
+          <td mat-cell *matCellDef="let element">
             <span [innerHTML]="element.type | highlight:query"></span>
-          </mat-cell>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="time">
-          <mat-header-cell *matHeaderCellDef> {{ 'EVENT_PAGE.TIME' | translate }} </mat-header-cell>
-          <mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef> {{ 'EVENT_PAGE.TIME' | translate }} </th>
+          <td mat-cell *matCellDef="let element">
             <span [innerHTML]="element.time | highlight:query"></span>
-          </mat-cell>
+          </td>
         </ng-container>
 
-        <mat-header-row *matHeaderRowDef="tableColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: tableColumns;"></mat-row>
-      </mat-table>
+        <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
+      </table>
     </ng-template>
 
     <ng-template #noEvents>
