--- a/src/app/snapshot/recurring-snapshots/policy-list/policy-list.component.html
+++ b/src/app/snapshot/recurring-snapshots/policy-list/policy-list.component.html
@@ -1,32 +1,32 @@
-<mat-table [dataSource]="policyViews">
+<table mat-table [dataSource]="policyViews">
 
   <ng-container matColumnDef="time">
-    <mat-header-cell *matHeaderCellDef> {{ 'SNAPSHOT_POLICIES.TIME' | translate }} </mat-header-cell>
-    <mat-cell *matCellDef="let element">
+    <th mat-header-cell *matHeaderCellDef> {{ 'SNAPSHOT_POLICIES.TIME' | translate }} </th>
+    <td mat-cell *matCellDef="let element">
       {{ element.timeToken | translate:{ value: element.timeValue } }}
-    </mat-cell>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="period">
-    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-    <mat-cell *matCellDef="let element">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
       {{ element.periodToken | translate: { value: element.periodValue | translate } }}
-    </mat-cell>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="timeZone">
-    <mat-header-cell *matHeaderCellDef> {{ 'SNAPSHOT_POLICIES.TIME_ZONE' | translate }} </mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{ element.timeZone }} </mat-cell>
+    <th mat-header-cell *matHeaderCellDef> {{ 'SNAPSHOT_POLICIES.TIME_ZONE' | translate }} </th>
+    <td mat-cell *matCellDef="let element"> {{ element.timeZone }} </td>
   </ng-container>
 
   <ng-container matColumnDef="keep">
-    <mat-header-cell *matHeaderCellDef> {{ 'SNAPSHOT_POLICIES.KEEP' | translate }} </mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{ element.keep }} </mat-cell>
+    <th mat-header-cell *matHeaderCellDef> {{ 'SNAPSHOT_POLICIES.KEEP' | translate }} </th>
+    <td mat-cell *matCellDef="let element"> {{ element.keep }} </td>
   </ng-container>
 
   <ng-container matColumnDef="delete">
-    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-    <mat-cell *matCellDef="let element">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
       <button
         mat-icon-button
         (click)="deletePolicy(element)"
@@ -34,13 +34,10 @@
       >
         <mat-icon class="mdi-delete"></mat-icon>
       </button>
-    </mat-cell>
+    </td>
   </ng-container>
 
-  <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
-  <mat-row
-    *matRowDef="let row; columns: columnsToDisplay"
-    (click)="handlePolicyRowClick(row)"
-  ></mat-row>
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnsToDisplay" (click)="handlePolicyRowClick(row)"></tr>
 
-</mat-table>
+</table>
