--- a/src/app/security-group/sg-rules/sg-rules.component.html
+++ b/src/app/security-group/sg-rules/sg-rules.component.html
@@ -2,8 +2,8 @@
   <h3
     class="mat-dialog-title"
     [innerHTML]="!editMode ?
-    ('SECURITY_GROUP_PAGE.RULES.VIEW_TITLE' | translate:{ value: securityGroupName }) :
-    ('SECURITY_GROUP_PAGE.RULES.EDIT_TITLE' | translate:{ value: securityGroupName })"
+    ('SECURITY_GROUP_PAGE.RULES.VIEW_TITLE' | translate:{ value: securityGroup.name }) :
+    ('SECURITY_GROUP_PAGE.RULES.EDIT_TITLE' | translate:{ value: securityGroup.name })"
   >
   </h3>
 
