--- a/src/app/security-group/sg-sidebar/sg-details/security-group-details.component.html
+++ b/src/app/security-group/sg-sidebar/sg-details/security-group-details.component.html
@@ -13,7 +13,7 @@
         ></cs-parameters-pair>
         <cs-parameters-pair
           [name]="'SECURITY_GROUP_PAGE.DETAILS.NAME'"
-          [value]="securityGroupName"
+          [value]="securityGroup.name"
         ></cs-parameters-pair>
         <cs-parameters-pair
           *ngIf="!isPrivate"
