--- a/src/app/vm/vm-creation/components/security-group-selector/security-group-selector.component.html
+++ b/src/app/vm/vm-creation/components/security-group-selector/security-group-selector.component.html
@@ -12,8 +12,7 @@
       (click)="$event.stopPropagation(); selectSecurityGroup(sg)">
 
         <h4 matLine>
-          <span *ngIf="isDefault(sg) && defaultGroupName">{{ defaultGroupName }}</span>
-          <span *ngIf="!isDefault(sg) || !defaultGroupName">{{ sg.name }}</span>
+          <span>{{ sg.name }}</span>
         </h4>
         <p
           matLine
