--- a/src/app/security-group/sg-sidebar/security-group-sidebar.component.html
+++ b/src/app/security-group/sg-sidebar/security-group-sidebar.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="entity">
   <div class="title-container">
-    <h4 class="details-header">{{ securityGroupName }}</h4>
+    <h4 class="details-header">{{ entity.name }}</h4>
     <button mat-icon-button
             [matMenuTriggerFor]="actionsMenu"
     >
